...
        android:icon="@drawable/ic_wallet" />

    <item android:id="@+id/action_bank"
        android:title="Bank"
        android:icon="@drawable/ic_bank" />

    <item android:id="@+id/action_community"
        android:title="Community"
        android:icon="@drawable/ic_community" />
</menu>
