...
        <item>QUID</item>
        <item>PENY</item>
    </string-array>

    <string-array name="leaderboards">
        <item>All Time</item>
        <item>Friends</item>
    </string-array>

    <string name="title_activity_send_trade">SendTradeActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_set_up_account">SetUpAccountActivity</string>

...
    </string>

    <string name="no_friends">
        Looks like you don\'t have any friends, search for some above!
    </string>

    <string name="search_friends_fail">
        Can\'t find this user!
    </string>

    <string name="no_trades">
        You don\'t have any trades to show, try sending some coinz to another user button below
    </string>
...
